--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "date-fns": "^2.11.1",
+    "firebase-tools": "^8.0.2",
     "i": "^0.3.6",
     "react": "^16.13.1",
     "react-calendar": "^3.0.1",
